--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,34 @@ body, html{
 
 body {
     background-color: #222;
-    background: url();
+    background: url(images/theater_img.jpeg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
   
    }
+
+   h1 {
+    position: absolute;
+    font-size: 4em;
+    color: whitesmoke;
+    letter-spacing: 3px;
+    font-family: 'Bangers', cursive;
+    bottom: 80%;
+    margin-bottom: 55px;
+}
+
+h2 {
+    font-size: 2.5em;
+    color: whitesmoke;
+    letter-spacing: 3px;
+    font-family: 'Bangers', cursive;
+}
+
+h3 {
+    font-size: 1.3em;
+    color: rgb(37, 6, 6);
+    letter-spacing: 2px;
+    
+}
