--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-repeat:no-repeat;
+    background-position: center center
   
    }
 
@@ -58,7 +60,7 @@ h3 {
 
 .question, .winner {
     background-color: #c1ced5;
-    width: 50%;
+    /* width: 50%; */
     padding: 25px 50px;
     border: 5px solid #efeee8;
     border-radius: 15px;
