--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
-body, html{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+html,body {
     width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 body {
-    background-color: #222;
+    background-color: black;
     background: url(images/theater_img.jpeg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
