--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,21 @@ html,body {
     overflow-x: hidden;
 }
 
+/*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
+@media screen and (min-width: 1024px){
+    /*Style*/
+    }
+    
+    /*###Tablet(medium)###*/
+    @media screen and (min-width : 768px) and (max-width : 1023px){
+    /*Style*/
+    }
+    
+    /*### Smartphones (portrait and landscape)(small)### */
+    @media screen and (min-width : 0px) and (max-width : 767px){
+    /*Style*/
+    }
+
 body {
     background-color: black;
     background: url(images/theater_img.jpeg);
