--- a/styles.css
+++ b/styles.css
@@ -6,20 +6,6 @@ html,body {
     overflow-x: hidden;
 }
 
-/*###Desktops, big landscape tablets and laptops(Large, Extra large)####*/
-@media screen and (min-width: 1024px){
-    /*Style*/
-    }
-    
-    /*###Tablet(medium)###*/
-    @media screen and (min-width : 768px) and (max-width : 1023px){
-    /*Style*/
-    }
-    
-    /*### Smartphones (portrait and landscape)(small)### */
-    @media screen and (min-width : 0px) and (max-width : 767px){
-    /*Style*/
-    }
 
 body {
     background-color: black;
@@ -38,20 +24,22 @@ body {
     width: 770px;
     height: 380px;
     padding-top: 0px;
-    margin-top: 55px;
+    margin-top: 5px;
     -moz-box-shadow: 0 0 5px #fff;
     -webkit-box-shadow: 0 0 5px #fff;
     box-shadow: 0px 0px 5px #fff;
 }
 
    h1 {
-    position: absolute;
+    /* position: absolute; */
     font-size: 4em;
     color: whitesmoke;
     letter-spacing: 3px;
-    bottom: 80%;
-    margin-bottom: 55px;
+    margin-top: -10%;
     font-family: 'Bangers', cursive;
+    margin: 0%;
+    margin-bottom: 0 !important;
+    
 }
 
 h2 {
@@ -87,8 +75,7 @@ h3 {
 
 .question {
     background-color: #c1ced5;
-    /* width: 50%; */
-    padding: 25px 50px;
+    padding: 5px 10px;
     border: 5px solid #efeee8;
     border-radius: 15px;
     text-align: center;
@@ -98,8 +85,7 @@ h3 {
 
 .winner {
     background-color: #c1ced5;
-    /* width: 50%; */
-    padding: 25px 50px;
+    padding: 15px 20px;
     border: 5px solid #efeee8;
     border-radius: 15px;
     text-align: center;
